--- a/package.json
+++ b/package.json
@@ -11,7 +11,24 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "recompose": "^0.30.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "@babel/runtime": "^7.1.2",
+    "@types/react": "^16.9.5",
+    "arrify": "^1.0.1",
+    "classnames": "^2.2.6",
+    "dom-helpers": "^3.2.1",
+    "downshift": "^3.3.1",
+    "fuzzaldrin-plus": "^0.6.0",
+    "gatsby": "^2.17.10",
+    "glamor": "^2.20.40",
+    "lodash.debounce": "^4.0.8",
+    "lodash.mapvalues": "^4.6.0",
+    "prop-types": "^15.6.2",
+    "react-scrollbar-size": "^2.0.2",
+    "react-tiny-virtual-list": "^2.1.4",
+    "react-transition-group": "^2.5.0",
+    "tinycolor2": "^1.4.1",
+    "ui-box": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,5 +41,58 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@reactions/component": "^2.0.2",
+    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-links": "^3.4.11",
+    "@storybook/addon-options": "^3.4.11",
+    "@storybook/addons": "^3.4.11",
+    "@storybook/react": "^3.4.11",
+    "ava": "^1.3.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-plugin-add-react-displayname": "^0.0.5",
+    "concurrently": "^4.0.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-xo-react": "^0.17.0",
+    "eslint-plugin-react": "^7.11.1",
+    "execa": "^1.0.0",
+    "faker": "^4.1.0",
+    "file-loader": "^2.0.0",
+    "fs-extra": "^7.0.0",
+    "husky": "^1.1.2",
+    "lint-staged": "^7.3.0",
+    "np": "^4.0.2",
+    "prettier": "^1.14.3",
+    "react": "^16.5.2",
+    "react-chromatic": "^0.8.4",
+    "react-dom": "^16.5.2",
+    "react-test-renderer": "^16.5.2",
+    "sinon": "^7.0.0",
+    "size-limit": "^0.21.1",
+    "starwars-names": "^1.6.0",
+    "url-loader": "^1.1.2",
+    "xo": "^0.24.0"
+  },
+  "xo": {
+    "parser": "babel-eslint",
+    "extends": [
+      "xo-react",
+      "prettier",
+      "prettier/react"
+    ],
+    "envs": [
+      "browser"
+    ]
+  }
 }
