--- a/package.json
+++ b/package.json
@@ -3,31 +3,34 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/icons": "^3.11.0",
-    "firebase": "^5.6.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^5.1.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "recompose": "^0.30.0",
-    "redux": "^4.0.4",
     "@babel/runtime": "^7.1.2",
-    "@types/react": "^16.9.5",
+    "@blueprintjs/icons": "^3.11.0",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
     "arrify": "^1.0.1",
     "classnames": "^2.2.6",
     "dom-helpers": "^3.2.1",
     "downshift": "^3.3.1",
+    "firebase": "^5.6.0",
     "fuzzaldrin-plus": "^0.6.0",
     "gatsby": "^2.17.10",
     "glamor": "^2.20.40",
     "lodash.debounce": "^4.0.8",
     "lodash.mapvalues": "^4.6.0",
     "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
     "react-scrollbar-size": "^2.0.2",
     "react-tiny-virtual-list": "^2.1.4",
     "react-transition-group": "^2.5.0",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.4",
     "tinycolor2": "^1.4.1",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2",
     "ui-box": "^2.1.2"
   },
   "scripts": {
@@ -63,6 +66,7 @@
     "concurrently": "^4.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "eslint": "5.6.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.11.1",
